# vitruvian-vtt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vtt_config.toml
.github/ISSUE_TEMPLATE/: backend-addition.md  frontend-addition.md
.github/workflows/: cargo_fmt.yml  storybook_deploy.yml
.storybook/: main.ts  preview.ts
dbs/: v1.db
src/: App.css  App.tsx  main.tsx  test_character_data.json
src-dbs/: Cargo.toml
src-dbs/src/: lib.rs
src-dbs/src/ingestion/pf2e/ancestry/: flaw.rs
src-dbs/src/ingestion/pf2e/classes/: ancestry_feat_levels.rs  class_feat_levels.rs  defenses.rs  perception.rs  saving_throws.rs  skill_increase_levels.rs  spellcasting.rs
src-dbs/src/ingestion/pf2e/core/: item.rs  mod.rs  rule.rs  size.rs  vision.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  storybook.conf.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  type_gen.rs
src-tauri/src/commands/: mod.rs  themes.rs
src-tauri/src/ingestion/: core.rs  mod.rs
src-tauri/src/ingestion/core/: description.rs  publication.rs  traits.rs
src-tauri/src/ingestion/pf2e/: mod.rs
src-tauri/src/ingestion/pf2e/ancestry/: boost.rs  flaw.rs  mod.rs
src-tauri/src/ingestion/pf2e/classes/: ancestry_feat_levels.rs  attacks.rs  general_feat_levels.rs  hit_points.rs  item.rs  key_ability.rs  mod.rs  rule.rs  skill_feat_levels.rs  trained_skills.rs
src-tauri/src/ingestion/pf2e/core/: description.rs  item.rs  languages.rs  mod.rs  publication.rs  rarity.rs  traits.rs
src-tauri/tests/: foo.rs  ingestion.rs
src-types/: Cargo.toml
src-types/src/: entity.rs  lib.rs  theme.rs
src-types/src/component/: core.rs  mod.rs
src/common/: entity.ts  theme.ts  types.ts  util.ts
src/components/: Badge.tsx  Button.tsx  CharacterCard.tsx  ChracterPortrait.tsx  ClassBadge.tsx  Icon.tsx  ListDisplay.tsx  Modal.tsx  NumberBadge.tsx  PopOver.tsx  SearchBar.tsx  Tag.tsx  TextFit.tsx
src/components/entityTable/: EntityTable.tsx  EntityTableGroup.tsx  EntityTableHeader.tsx
src/components/input/: Input.tsx  input.css
src/components/table/: Table.tsx  TableGroup.tsx
src/components/wizard/: WizardCompnent.tsx  WizardComponentContext.ts  WizardStepComponent.tsx
src/routes/: CharacterSelectionPage.tsx  routes.ts
src/routes/CharacterSelectionPage/: CharacterSelectionPage.tsx
src/routes/ComponentLibrary/: ComponentLibrary.tsx
src/routes/Home/: Home.tsx  WizardComponenetExample.tsx
src/stores/: main.ts
src/stories/: Button.stories.tsx  CharacterCard.stories.tsx  CharacterPortrait.stories.tsx  EntityTable.stories.tsx  Icon.stories.ts  Input.stories.tsx  Modal.stories.tsx  TextFit.stories.tsx
src/types/: Icon.ts
storybook-static/: iframe.html  index.json  project.json
storybook-static/assets/: Color-ERTF36HU-G-zSBvvI.js  Configure-CPNtU0Zn.js  DocsRenderer-CFRXHY34-BcEgtFfV.js  EntityTable.stories-CM5xgQfo.js  Icon-BFgXAZrc.js  Icon.stories-DNK4erDo.js  entry-preview-CCjDl8p0.js  iframe-nbia2B2L.js  index-CXkRn9UR.js  index-DCHjxuWk.js  preview-DBJBBH8J.js  preview-DZNiHHsj.css  preview-Dm9EE_J0.js
