[package]
name = "vitruvian-vtt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vitruvian_vtt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }
vitruvian-types = {path = "../src-types"}

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "9.0.1"
vitruvian-types = {path = "../src-types"}

[[bin]]
name="type-gen"
path="src/type_gen.rs"