[package]
name = "vitruvian-vtt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vitruvian_vtt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }
vitruvian-types = {path = "../src-types"}

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "9.0.1"
vitruvian-types = {path = "../src-types"}
rusqlite = { version = "0.32.1", features = ["bundled"] }
git2 = "0.19.0" # Bindings to libgit2 for interoperating with git repositories. This library is both threadsafe and memory safe and allows both reading and writing git repositories. 
strum = { version = "0.26" }
strum_macros = { version = "0.26" }
spinoff = "0.8.0" # an easy to use, robust library for displaying spinners in the terminal