[package]
name = "vitruvian-types"
version = "0.1.0"
edition = "2021"
description = "This crate is where vitruvian will define it's data."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26.3", features = ["derive"] }
ts-rs = {git = "https://github.com/Aleph-Alpha/ts-rs.git"}
